# moho-mate

./: .gitignore  Frameworks  LEARNING_WORKFLOW.md  README.md  README_CN.md  SKILL.md  SKILL.md.bak  latest.json
docs/: PKG_DESIGN.md  PKG_DESIGN_v2.md  UPGRADE_DESIGN.md
include/libavdevice/: avdevice.h  version.h  version_major.h
include/libavutil/: avconfig.h  ffversion.h
references/: cli-reference.md  lua-patterns.md
references/api/: API_INDEX.md  pkg_anime.lua_pkg  pkg_lm.lua_pkg  pkg_lm_gui.lua_pkg  pkg_moho.lua_pkg
scripts/: AutoBoneGenerator.lua  AutoBoneGenerator_v2.lua  BoneReparent.lua  IPCFileSaveAs.lua  LaplacianSkeleton.lua  LaplacianSkeleton_v2.lua  SetBoneFromEndpoints.lua  WINDOWS_DLL.md  build.sh  download-ffmpeg-headers.sh  draw_bunny.lua  draw_circle.lua  draw_ipc.lua  draw_puppy.lua  libavcodec.61.dylib  libavformat.61.dylib  libavutil.59.dylib  libswresample.5.dylib  libswscale.8.dylib  moho-mate  moho-mate-start  moho-mate.bak  moho-mate.c.bak  moho-mate.rust  moho_ipc_client  test_lua_module.lua
scripts/include/libavdevice/: avdevice.h  version.h
scripts/include/libavutil/: avconfig.h  version.h
scripts/ipc/: INSTALL_FFMPEG.md  build.sh  build_ffmpeg.sh  build_unified.sh  draw_ipc.c  gui_executor.lua  ipc.lua  ipc_tool.lua  ipc_tool.lua.backup  moho-mate  moho-mate.c  moho_ipc.c  moho_ipc.c.bak2  moho_ipc.lua  moho_ipc_client  moho_ipc_client.c  test_all_commands.sh  test_encode.lua  test_encode_apng.lua  test_encode_gif.lua
scripts/ipc/rust/: .gitignore  Cargo.cli.toml  Cargo.module.toml  Cargo.toml  Cargo.toml.bak  build-ffmpeg.sh  build.rs
scripts/ipc/rust/src/: encode_builtin.rs  encode_native.rs  ffmpeg_ffi.rs  ipc_core.rs  ipc_core.rs.bak  lua_ffi.rs  main.rs
scripts/ipc/rust/src/commands/: call.rs  config.rs  draw.rs  encode.rs  inspect.rs  mod.rs  quit.rs  render.rs  start.rs  status.rs
scripts/ipc/rust/src/ipc/: client.rs  mod.rs
scripts/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
scripts/moho-mate-src/: Cargo.toml  build.rs
scripts/moho-mate-src/.github/workflows/: release.yml
scripts/moho-mate-src/src/: app_config.rs  config.rs  encode_native.rs  ffmpeg_ffi.rs  ipc_core.rs  lib.rs  main.rs  main.rs.bak4  main.rs.bak5  pkg.rs  self_update.rs
scripts/moho-mate-src/tests/: cli_test.rs  config_test.rs  integration_test.rs  ipc_core_test.rs  lua_ffi_test.rs  pkg_test.rs  test_utils.rs
scripts/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
scripts/rust/.cargo/: config.toml
scripts/rust/src/: lua_ffi.rs
scripts/templates/: tutorial_102_hills.lua
scripts/token-service/: moho-mate-call  server.js  worker.js  wrangler.toml
