[package]
name = "moho-mate"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "moho-mate"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"

# Phase 2: FFmpeg 编码
# ffmpeg-next = "7"

[profile.release]
opt-level = 3
lto = true
strip = true
