[package]
name = "moho-mate"
version = "0.1.0"
edition = "2021"

# CLI 可执行文件
[[bin]]
name = "moho-mate"
path = "src/main.rs"

[dependencies]
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "5"
rand = "0.8"
clap = { version = "4", features = ["derive"] }
zip = "0.6"
libc = "0.2"
which = "6"

# FFmpeg 绑定已替换为自定义 FFI（见 src/ffmpeg_ffi.rs）
# 不再依赖 rusty_ffmpeg

[build-dependencies]
which = "6"
bindgen = "0.72"

[target.'cfg(target_os = "macos")'.dependencies]
# 不需要 dispatch2，使用自定义 GCD FFI

[features]
default = ["ffmpeg-builtin"]
ffmpeg-builtin = []  # 使用 Moho 内置 FFmpeg（自定义 FFI）

[profile.release]
opt-level = 3
lto = true
panic = "unwind"

# macOS: 导出动态符号（让 Lua 可以 dlopen 加载）
# rustflags = ["-C", "link-arg=-Wl,-export_dynamic"]

[target.x86_64-apple-darwin]
rustflags = ["-C", "link-arg=-Wl,-export_dynamic"]

[target.aarch64-apple-darwin]
rustflags = ["-C", "link-arg=-Wl,-export_dynamic"]
